--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   google_fonts: ^3.0.1
   get: ^4.6.5
+  card_swiper: ^2.0.1
 
 flutter:
   uses-material-design: true
