--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dev_dependencies:
   google_fonts: ^3.0.1
   get: ^4.6.5
   card_swiper: ^2.0.1
+  webview_flutter: ^3.0.4
 
 flutter:
   uses-material-design: true
@@ -28,4 +29,4 @@ flutter:
     - assets/
     - assets/images/
     - assets/svgs/
-    - assets/epay/epay_request.html
+    - assets/epay/
